# FastAPI-User-Management-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4ff9da2456f8_create_users_table.py
app/: __init__.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/middleware/: request_logger.py
app/routers/: health.py  users.py
app/services/: __init__.py  user_service.py
app/utils/: __init__.py  helpers.py  logger.py  validators.py
docs/: requests.http
tests/: conftest.py  test_api.py  test_database.py  test_users.py
